infrastructure/terraform/modules/security-group/main.tf
resource "aws_security_group" "alb_sg" {
    name = "${var.project_name}-alb-sg"
    description = "Security group for ALB"
    vpc_id = var.vpc_id
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }
    # ingress {
    #     from_port = 8080
    #     to_port = 8080
    #     protocol = "tcp"
    #     cidr_blocks = ["0.0.0.0/0"]

    # }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
resource "aws_security_group" "app" {
    name = "${var.project_name}-app-sg"
    description = "Security group for application instances"
    vpc_id = var.vpc_id
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.project_name}-app-sg"
    }
}

resource "aws_security_group" "db" {
    name = "${var.project_name}-db-sg"
    description = "Security group for database instances"
    vpc_id = var.vpc_id
    ingress {
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        security_groups = [aws_security_group.app.id]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "${var.project_name}-db-sg"
    }
}
resource "aws_security_group" "efs_sg" {
    name = "${var.project_name}-efs-sg"
    description = "Security group for EFS"
    vpc_id = var.vpc_id
    ingress  {
        from_port = 2049
        to_port = 2049
        protocol = "tcp"
        security_groups = [aws_security_group.app.id]
    }
    egress {
        from_port = 0
        to_port =0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}


### security group  for redis
resource "aws_security_group" "redis_sg" {
    name = "${var.project_name}-redis-sg"
    description = "security group for redis cluster"
    vpc_id = var.vpc_id
    ingress {
        from_port = 6379
        to_port = 6379
        protocol = "tcp"
        security_groups = [aws_security_group.app.id]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
